2003-01-27  Alexandre Oliva  <aoliva@redhat.com>

	* mips.h (EF_MIPS_XGOT): Define.

2003-01-24  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* s390.h: Add s390 TLS relocations.

2003-01-23  Nick Clifton  <nickc@redhat.com>

	* Add sh2e support:

	2002-04-02  Alexandre Oliva  <aoliva@redhat.com>

	 	* sh.h (EF_SH_MERGE_MACH): Handle SH2E.

	2002-04-02  Elena Zannoni  <ezannoni@redhat.com>

		* sh.h (EF_SH2E): New.

2003-01-23  Alan Modra  <amodra@bigpond.net.au>

	* sh.h: Split out various bits to bfd/elf32-sh64.h.

2003-01-20  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* s390.h: Rename R_390_GOTOFF to R_390_GOTOFF32. Add new gotoff,
	gotplt and pltoff relocations.

2003-01-17  Alan Modra  <amodra@bigpond.net.au>

	* common.h: Formatting, typo fixes.
	(DT_ENCODING): Correct value.

2003-01-17  Fabio Alemagna  <falemagn@aros.org>

	* common.h (ELFOSABI_AROS): Define.
	(ELFOSABI_OPENVMS): Likewise.
	(ELFOSABI_NSK): Likewise.

2003-01-16  Alan Modra  <amodra@bigpond.net.au>

	* ppc.h: Split out ppc64 definitions to..
	* pcc64.h: ..here.  New file.
	(R_PPC64_REL30): Rename from R_PPC64_ADDR30.

2003-01-13 Dmitry Diky <diwil@mail.ru>

	* elf/common.h (EM_MSP430): Change e_machine value to officially
	assigned.

2003-01-02  Ben Elliston  <bje@redhat.com>

	* common.h (EM_IQ2000): Define.
	* iq2000.h: New file.

2002-12-30  Chris Demetriou  <cgd@broadcom.com>

	* mips.h (E_MIPS_ARCH_32R2): New define.

2002-12-24    Dmitry Diky <diwil@mail.ru>

	* common.h: Define msp430 machine numbers.
	* msp430.h: New file.  Define msp430 relocs.

2002-12-20  DJ Delorie  <dj@redhat.com>

	* xstormy16.h: Add XSTORMY16_12.

2002-12-16  Andrew MacLeod  <amacleod@redhat.com>

	* xstormy16.h (START_RELOC_NUMBERS) Add relocation numbers
	for R_XSTORMY16_LO16 and R_XSTORMY16_HI16.

2002-12-10  James Cownie <jcownie@etnus.com>

	* dwarf2.h (DW_TAG_upc_shared_type, DW_TAG_upc_strict_type,
	DW_TAG_upc_relaxed_type, DW_AT_upc_threads_scaled, DW_LANG_Upc):
	Define.
