@@ -32,71 +32,101 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
 /* Relocations.  */
 START_RELOC_NUMBERS (elf_ppc_reloc_type)
-  RELOC_NUMBER (R_PPC_NONE, 0)
-  RELOC_NUMBER (R_PPC_ADDR32, 1)
-  RELOC_NUMBER (R_PPC_ADDR24, 2)
-  RELOC_NUMBER (R_PPC_ADDR16, 3)
-  RELOC_NUMBER (R_PPC_ADDR16_LO, 4)
-  RELOC_NUMBER (R_PPC_ADDR16_HI, 5)
-  RELOC_NUMBER (R_PPC_ADDR16_HA, 6)
-  RELOC_NUMBER (R_PPC_ADDR14, 7)
-  RELOC_NUMBER (R_PPC_ADDR14_BRTAKEN, 8)
-  RELOC_NUMBER (R_PPC_ADDR14_BRNTAKEN, 9)
-  RELOC_NUMBER (R_PPC_REL24, 10)
-  RELOC_NUMBER (R_PPC_REL14, 11)
-  RELOC_NUMBER (R_PPC_REL14_BRTAKEN, 12)
-  RELOC_NUMBER (R_PPC_REL14_BRNTAKEN, 13)
-  RELOC_NUMBER (R_PPC_GOT16, 14)
-  RELOC_NUMBER (R_PPC_GOT16_LO, 15)
-  RELOC_NUMBER (R_PPC_GOT16_HI, 16)
-  RELOC_NUMBER (R_PPC_GOT16_HA, 17)
-  RELOC_NUMBER (R_PPC_PLTREL24, 18)
-  RELOC_NUMBER (R_PPC_COPY, 19)
-  RELOC_NUMBER (R_PPC_GLOB_DAT, 20)
-  RELOC_NUMBER (R_PPC_JMP_SLOT, 21)
-  RELOC_NUMBER (R_PPC_RELATIVE, 22)
-  RELOC_NUMBER (R_PPC_LOCAL24PC, 23)
-  RELOC_NUMBER (R_PPC_UADDR32, 24)
-  RELOC_NUMBER (R_PPC_UADDR16, 25)
-  RELOC_NUMBER (R_PPC_REL32, 26)
-  RELOC_NUMBER (R_PPC_PLT32, 27)
-  RELOC_NUMBER (R_PPC_PLTREL32, 28)
-  RELOC_NUMBER (R_PPC_PLT16_LO, 29)
-  RELOC_NUMBER (R_PPC_PLT16_HI, 30)
-  RELOC_NUMBER (R_PPC_PLT16_HA, 31)
-  RELOC_NUMBER (R_PPC_SDAREL16, 32)
-  RELOC_NUMBER (R_PPC_SECTOFF, 33)
-  RELOC_NUMBER (R_PPC_SECTOFF_LO, 34)
-  RELOC_NUMBER (R_PPC_SECTOFF_HI, 35)
-  RELOC_NUMBER (R_PPC_SECTOFF_HA, 36)
-  RELOC_NUMBER (R_PPC_ADDR30, 37)
+  RELOC_NUMBER (R_PPC_NONE,		  0)
+  RELOC_NUMBER (R_PPC_ADDR32,		  1)
+  RELOC_NUMBER (R_PPC_ADDR24,		  2)
+  RELOC_NUMBER (R_PPC_ADDR16,		  3)
+  RELOC_NUMBER (R_PPC_ADDR16_LO,	  4)
+  RELOC_NUMBER (R_PPC_ADDR16_HI,	  5)
+  RELOC_NUMBER (R_PPC_ADDR16_HA,	  6)
+  RELOC_NUMBER (R_PPC_ADDR14,		  7)
+  RELOC_NUMBER (R_PPC_ADDR14_BRTAKEN,	  8)
+  RELOC_NUMBER (R_PPC_ADDR14_BRNTAKEN,	  9)
+  RELOC_NUMBER (R_PPC_REL24,		 10)
+  RELOC_NUMBER (R_PPC_REL14,		 11)
+  RELOC_NUMBER (R_PPC_REL14_BRTAKEN,	 12)
+  RELOC_NUMBER (R_PPC_REL14_BRNTAKEN,	 13)
+  RELOC_NUMBER (R_PPC_GOT16,		 14)
+  RELOC_NUMBER (R_PPC_GOT16_LO,		 15)
+  RELOC_NUMBER (R_PPC_GOT16_HI,		 16)
+  RELOC_NUMBER (R_PPC_GOT16_HA,		 17)
+  RELOC_NUMBER (R_PPC_PLTREL24,		 18)
+  RELOC_NUMBER (R_PPC_COPY,		 19)
+  RELOC_NUMBER (R_PPC_GLOB_DAT,		 20)
+  RELOC_NUMBER (R_PPC_JMP_SLOT,		 21)
+  RELOC_NUMBER (R_PPC_RELATIVE,		 22)
+  RELOC_NUMBER (R_PPC_LOCAL24PC,	 23)
+  RELOC_NUMBER (R_PPC_UADDR32,		 24)
+  RELOC_NUMBER (R_PPC_UADDR16,		 25)
+  RELOC_NUMBER (R_PPC_REL32,		 26)
+  RELOC_NUMBER (R_PPC_PLT32,		 27)
+  RELOC_NUMBER (R_PPC_PLTREL32,		 28)
+  RELOC_NUMBER (R_PPC_PLT16_LO,		 29)
+  RELOC_NUMBER (R_PPC_PLT16_HI,		 30)
+  RELOC_NUMBER (R_PPC_PLT16_HA,		 31)
+  RELOC_NUMBER (R_PPC_SDAREL16,		 32)
+  RELOC_NUMBER (R_PPC_SECTOFF,		 33)
+  RELOC_NUMBER (R_PPC_SECTOFF_LO,	 34)
+  RELOC_NUMBER (R_PPC_SECTOFF_HI,	 35)
+  RELOC_NUMBER (R_PPC_SECTOFF_HA,	 36)
+  RELOC_NUMBER (R_PPC_ADDR30,		 37)
+
+  /* Relocs added to support TLS.  */
+  RELOC_NUMBER (R_PPC_TLS,		 67)
+  RELOC_NUMBER (R_PPC_DTPMOD64,		 68)
+  RELOC_NUMBER (R_PPC_TPREL16,		 69)
+  RELOC_NUMBER (R_PPC_TPREL16_LO,	 70)
+  RELOC_NUMBER (R_PPC_TPREL16_HI,	 71)
+  RELOC_NUMBER (R_PPC_TPREL16_HA,	 72)
+  RELOC_NUMBER (R_PPC_TPREL64,		 73)
+  RELOC_NUMBER (R_PPC_DTPREL16,		 74)
+  RELOC_NUMBER (R_PPC_DTPREL16_LO,	 75)
+  RELOC_NUMBER (R_PPC_DTPREL16_HI,	 76)
+  RELOC_NUMBER (R_PPC_DTPREL16_HA,	 77)
+  RELOC_NUMBER (R_PPC_DTPREL64,		 78)
+  RELOC_NUMBER (R_PPC_GOT_TLSGD16,	 79)
+  RELOC_NUMBER (R_PPC_GOT_TLSGD16_LO,	 80)
+  RELOC_NUMBER (R_PPC_GOT_TLSGD16_HI,	 81)
+  RELOC_NUMBER (R_PPC_GOT_TLSGD16_HA,	 82)
+  RELOC_NUMBER (R_PPC_GOT_TLSLD16,	 83)
+  RELOC_NUMBER (R_PPC_GOT_TLSLD16_LO,	 84)
+  RELOC_NUMBER (R_PPC_GOT_TLSLD16_HI,	 85)
+  RELOC_NUMBER (R_PPC_GOT_TLSLD16_HA,	 86)
+  RELOC_NUMBER (R_PPC_GOT_TPREL16,	 87)
+  RELOC_NUMBER (R_PPC_GOT_TPREL16_LO,	 88)
+  RELOC_NUMBER (R_PPC_GOT_TPREL16_HI,	 89)
+  RELOC_NUMBER (R_PPC_GOT_TPREL16_HA,	 90)
+  RELOC_NUMBER (R_PPC_GOT_DTPREL16,	 91)
+  RELOC_NUMBER (R_PPC_GOT_DTPREL16_LO,	 92)
+  RELOC_NUMBER (R_PPC_GOT_DTPREL16_HI,	 93)
+  RELOC_NUMBER (R_PPC_GOT_DTPREL16_HA,	 94)
 
 /* The remaining relocs are from the Embedded ELF ABI, and are not
    in the SVR4 ELF ABI.  */
-  RELOC_NUMBER (R_PPC_EMB_NADDR32, 101)
-  RELOC_NUMBER (R_PPC_EMB_NADDR16, 102)
-  RELOC_NUMBER (R_PPC_EMB_NADDR16_LO, 103)
-  RELOC_NUMBER (R_PPC_EMB_NADDR16_HI, 104)
-  RELOC_NUMBER (R_PPC_EMB_NADDR16_HA, 105)
-  RELOC_NUMBER (R_PPC_EMB_SDAI16, 106)
-  RELOC_NUMBER (R_PPC_EMB_SDA2I16, 107)
-  RELOC_NUMBER (R_PPC_EMB_SDA2REL, 108)
-  RELOC_NUMBER (R_PPC_EMB_SDA21, 109)
-  RELOC_NUMBER (R_PPC_EMB_MRKREF, 110)
-  RELOC_NUMBER (R_PPC_EMB_RELSEC16, 111)
-  RELOC_NUMBER (R_PPC_EMB_RELST_LO, 112)
-  RELOC_NUMBER (R_PPC_EMB_RELST_HI, 113)
-  RELOC_NUMBER (R_PPC_EMB_RELST_HA, 114)
-  RELOC_NUMBER (R_PPC_EMB_BIT_FLD, 115)
-  RELOC_NUMBER (R_PPC_EMB_RELSDA, 116)
+  RELOC_NUMBER (R_PPC_EMB_NADDR32,	101)
+  RELOC_NUMBER (R_PPC_EMB_NADDR16,	102)
+  RELOC_NUMBER (R_PPC_EMB_NADDR16_LO,	103)
+  RELOC_NUMBER (R_PPC_EMB_NADDR16_HI,	104)
+  RELOC_NUMBER (R_PPC_EMB_NADDR16_HA,	105)
+  RELOC_NUMBER (R_PPC_EMB_SDAI16,	106)
+  RELOC_NUMBER (R_PPC_EMB_SDA2I16,	107)
+  RELOC_NUMBER (R_PPC_EMB_SDA2REL,	108)
+  RELOC_NUMBER (R_PPC_EMB_SDA21,	109)
+  RELOC_NUMBER (R_PPC_EMB_MRKREF,	110)
+  RELOC_NUMBER (R_PPC_EMB_RELSEC16,	111)
+  RELOC_NUMBER (R_PPC_EMB_RELST_LO,	112)
+  RELOC_NUMBER (R_PPC_EMB_RELST_HI,	113)
+  RELOC_NUMBER (R_PPC_EMB_RELST_HA,	114)
+  RELOC_NUMBER (R_PPC_EMB_BIT_FLD,	115)
+  RELOC_NUMBER (R_PPC_EMB_RELSDA,	116)
 
   /* These are GNU extensions to enable C++ vtable garbage collection.  */
-  RELOC_NUMBER (R_PPC_GNU_VTINHERIT, 253)
-  RELOC_NUMBER (R_PPC_GNU_VTENTRY, 254)
+  RELOC_NUMBER (R_PPC_GNU_VTINHERIT,	253)
+  RELOC_NUMBER (R_PPC_GNU_VTENTRY,	254)
 
 /* This is a phony reloc to handle any old fashioned TOC16 references
    that may still be in object files.  */
-  RELOC_NUMBER (R_PPC_TOC16, 255)
+  RELOC_NUMBER (R_PPC_TOC16,		255)
 
 END_RELOC_NUMBERS (R_PPC_max)
 
