@@ -1,3 +1,8 @@
+2003-02-05  Alan Modra  <amodra@bigpond.net.au>
+
+	* ppc.h: Add TLS relocs.  Format.
+	* ppc64.h: Likewise.
+
 2003-01-27  Alexandre Oliva  <aoliva@redhat.com>
 
 	* mips.h (EF_MIPS_XGOT): Define.
